--- a/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
+++ b/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
@@ -40,10 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappers\BasicMapper.cs" />
+    <Compile Include="Exceptions\AutoConfigException.cs" />
+    <Compile Include="Exceptions\AutoConfigMappingException.cs" />
     <Compile Include="Exceptions\AutoConfigTypeGenerationException.cs" />
+    <Compile Include="Mappers\IMapper.cs" />
+    <Compile Include="PropertyMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeGeneration\Extensions\TypeBuilderExtensions.cs" />
-    <Compile Include="TypeGeneration\Extensions\TypeExtensions.cs" />
+    <Compile Include="Extensions\TypeBuilderExtensions.cs" />
+    <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="TypeGeneration\TypeEmitter.cs" />
     <Compile Include="TypeGeneration\TypeFactory.cs" />
   </ItemGroup>
