--- a/Nerdle.AutoConfig.Tests.Integration/Nerdle.AutoConfig.Tests.Integration.csproj
+++ b/Nerdle.AutoConfig.Tests.Integration/Nerdle.AutoConfig.Tests.Integration.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F7D2CE16-1D73-40CB-A3AA-A02070621EDA}</ProjectGuid>
+    <ProjectGuid>{094123B9-7ED0-414B-A627-90446A4BEA74}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nerdle.AutoConfig.Tests</RootNamespace>
-    <AssemblyName>Nerdle.AutoConfig.Tests</AssemblyName>
+    <RootNamespace>Nerdle.AutoConfig.Tests.Integration</RootNamespace>
+    <AssemblyName>Nerdle.AutoConfig.Tests.Integration</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -48,20 +48,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyMappingTests\When_mapping_a_property.cs" />
-    <Compile Include="TypeGenerationTests\When_requesting_an_interface_from_the_factory.cs" />
-    <Compile Include="TypeGenerationTests\When_requesting_a_class_fron_the_factory.cs" />
-    <Compile Include="TypeGenerationTests\When_requesting_a_struct_fron_the_factory.cs" />
-    <Compile Include="TypeMappingTests\When_creating_a_mapping.cs" />
-    <Compile Include="TypeMappingTests\When_mapping_a_type.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nerdle.AutoConfig\Nerdle.AutoConfig.csproj">
-      <Project>{ED242B1A-EC9E-4865-A59B-11F1498D46A5}</Project>
+      <Project>{ed242b1a-ec9e-4865-a59b-11f1498d46a5}</Project>
       <Name>Nerdle.AutoConfig</Name>
     </ProjectReference>
   </ItemGroup>
