CollectionMapper and selectable IMapping strategies

--- a/Nerdle.AutoConfig.Tests.Integration/App.config
+++ b/Nerdle.AutoConfig.Tests.Integration/App.config
@@ -1,13 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  
   <configSections>
-    <section name="BasicConfig" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+    <section name="HasSimpleTypes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+    <section name="HasCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
   </configSections>
 
-  <BasicConfig>
+  <HasSimpleTypes>
     <String>hello world</String>
     <Int>42</Int>
+    <Nullable>55</Nullable>
+    <EmptyNullable></EmptyNullable>
     <Bool>true</Bool>
     <Date>21 July 1969</Date>
-  </BasicConfig>
+  </HasSimpleTypes>
+
+  <HasCollections>
+    <Primes>
+      <Prime>2</Prime>
+      <Prime>3</Prime>
+      <Prime>5</Prime>
+      <Prime>7</Prime>
+    </Primes>
+    <Colors>
+      <Color>Red</Color>
+      <Color>Green</Color>
+    </Colors>
+    <Unicorns>
+    </Unicorns>
+  </HasCollections>
+
 </configuration>
