--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="MapperTests\When_mapping_a_collection.cs" />
     <Compile Include="MapperTests\When_mapping_simple_types.cs" />
+    <Compile Include="MapperTests\When_selecting_a_mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyMappingTests\When_mapping_a_property.cs" />
     <Compile Include="TypeGenerationTests\When_requesting_an_interface_from_the_factory.cs" />
