Nested collections test

--- a/Nerdle.AutoConfig.Tests.Integration/App.config
+++ b/Nerdle.AutoConfig.Tests.Integration/App.config
@@ -4,6 +4,7 @@
   <configSections>
     <section name="HasSimpleTypes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
     <section name="HasCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+    <section name="HasNestedCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
   </configSections>
 
   <HasSimpleTypes>
@@ -29,5 +30,19 @@
     <Unicorns>
     </Unicorns>
   </HasCollections>
+  
+  <HasNestedCollections>
+    <Numbers>
+      <Odds>
+        <Number>1</Number>
+        <Number>3</Number>
+        <Number>5</Number>
+      </Odds>
+      <Evems>
+        <Number>2</Number>
+        <Number>4</Number>
+      </Evems>
+    </Numbers>
+  </HasNestedCollections>
 
 </configuration>
