Refactored to add attribute support

--- a/Nerdle.AutoConfig.Tests.Integration/App.config
+++ b/Nerdle.AutoConfig.Tests.Integration/App.config
@@ -5,6 +5,8 @@
     <section name="HasSimpleTypes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
     <section name="HasCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
     <section name="HasNestedCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+    <section name="MappedFromAttributes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+    <section name="MappedFromPropertiesAndAttributes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
   </configSections>
 
   <HasSimpleTypes>
@@ -44,5 +46,15 @@
       </Evems>
     </Numbers>
   </HasNestedCollections>
+  
+  <MappedFromAttributes Url="http://foo" Port="80" />
+  
+  <MappedFromPropertiesAndAttributes Pizza="Vege Deluxe" Inches="12" Price="9.99">
+    <Toppings>
+      <Topping>Aubergine</Topping>
+      <Topping>Spinach</Topping>
+      <Topping>Artichoke</Topping>
+    </Toppings>    
+  </MappedFromPropertiesAndAttributes>
 
 </configuration>
