--- a/Nerdle.AutoConfig.Tests.Integration/App.config
+++ b/Nerdle.AutoConfig.Tests.Integration/App.config
@@ -7,6 +7,7 @@
     <section name="HasNestedCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
     <section name="MappedFromAttributes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
     <section name="MappedFromPropertiesAndAttributes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+    <section name="HasNestedComplexTypes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
   </configSections>
 
   <HasSimpleTypes>
@@ -56,5 +57,19 @@
       <Topping>Artichoke</Topping>
     </Toppings>    
   </MappedFromPropertiesAndAttributes>
+
+  <HasNestedComplexTypes Foo="foo" Bar="bar" Baz="baz">
+    <Lunch Pizza="Vege Deluxe" Inches="12" Price="9.99">
+      <Toppings>
+        <Topping>Aubergine</Topping>
+        <Topping>Spinach</Topping>
+        <Topping>Artichoke</Topping>
+      </Toppings>
+    </Lunch>
+    <LunchServices>
+      <Service Url="http://WorldOfPizza" Port="70" />
+      <Service Url="http://PizzaKing" Port="80" />
+    </LunchServices>
+  </HasNestedComplexTypes>
 
 </configuration>
