--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MapperTests\When_mapping_a_complex_type.cs" />
     <Compile Include="MapperTests\When_mapping_a_collection.cs" />
     <Compile Include="MapperTests\When_mapping_simple_types.cs" />
     <Compile Include="MapperTests\When_selecting_a_mapper.cs" />
