--- a/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
+++ b/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Mappers\Mapper.cs" />
     <Compile Include="Mappers\CollectionMapper.cs" />
     <Compile Include="Mappers\IMapper.cs" />
+    <Compile Include="Mappers\ComplexMapper.cs" />
     <Compile Include="Mappers\ValueMapper.cs" />
     <Compile Include="Exceptions\AutoConfigException.cs" />
     <Compile Include="Exceptions\AutoConfigMappingException.cs" />
