Refactored integration tests

--- a/Nerdle.AutoConfig.Tests.Integration/App.config
+++ b/Nerdle.AutoConfig.Tests.Integration/App.config
@@ -1,75 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  
-  <configSections>
-    <section name="HasSimpleTypes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
-    <section name="HasCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
-    <section name="HasNestedCollections" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
-    <section name="MappedFromAttributes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
-    <section name="MappedFromPropertiesAndAttributes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
-    <section name="HasNestedComplexTypes" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
-  </configSections>
-
-  <HasSimpleTypes>
-    <String>hello world</String>
-    <Int>42</Int>
-    <Nullable>55</Nullable>
-    <EmptyNullable></EmptyNullable>
-    <Bool>true</Bool>
-    <Date>21 July 1969</Date>
-  </HasSimpleTypes>
-
-  <HasCollections>
-    <Primes>
-      <Prime>2</Prime>
-      <Prime>3</Prime>
-      <Prime>5</Prime>
-      <Prime>7</Prime>
-    </Primes>
-    <Colors>
-      <Color>Red</Color>
-      <Color>Green</Color>
-    </Colors>
-    <Unicorns>
-    </Unicorns>
-  </HasCollections>
-  
-  <HasNestedCollections>
-    <Numbers>
-      <Odds>
-        <Number>1</Number>
-        <Number>3</Number>
-        <Number>5</Number>
-      </Odds>
-      <Evems>
-        <Number>2</Number>
-        <Number>4</Number>
-      </Evems>
-    </Numbers>
-  </HasNestedCollections>
-  
-  <MappedFromAttributes Url="http://foo" Port="80" />
-  
-  <MappedFromPropertiesAndAttributes Pizza="Vege Deluxe" Inches="12" Price="9.99">
-    <Toppings>
-      <Topping>Aubergine</Topping>
-      <Topping>Spinach</Topping>
-      <Topping>Artichoke</Topping>
-    </Toppings>    
-  </MappedFromPropertiesAndAttributes>
-
-  <HasNestedComplexTypes Foo="foo" Bar="bar" Baz="baz">
-    <Lunch Pizza="Vege Deluxe" Inches="12" Price="9.99">
-      <Toppings>
-        <Topping>Aubergine</Topping>
-        <Topping>Spinach</Topping>
-        <Topping>Artichoke</Topping>
-      </Toppings>
-    </Lunch>
-    <LunchServices>
-      <Service Url="http://WorldOfPizza" Port="70" />
-      <Service Url="http://PizzaKing" Port="80" />
-    </LunchServices>
-  </HasNestedComplexTypes>
-
+  <!-- this config file will be overwritten on test fixture setup, don't modify/remove -->
 </configuration>
