--- a/Nerdle.AutoConfig.Tests.Integration/Nerdle.AutoConfig.Tests.Integration.csproj
+++ b/Nerdle.AutoConfig.Tests.Integration/Nerdle.AutoConfig.Tests.Integration.csproj
@@ -40,6 +40,7 @@
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,8 +49,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoConfigEndToEndTests.cs" />
+    <Compile Include="MappingCollections.cs" />
+    <Compile Include="EndToEndTest.cs" />
+    <Compile Include="ConfigExamples.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConfigExamples.resx</DependentUpon>
+    </Compile>
+    <Compile Include="MappingFromAttributes.cs" />
+    <Compile Include="MappingNestedComplexTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MappingSimpleExamples.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -63,6 +73,20 @@
       <Name>Nerdle.AutoConfig</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="MappingFromAttributes.xml" />
+    <Content Include="MappingNestedComplexTypes.xml" />
+    <Content Include="MappingCollections.xml" />
+    <Content Include="MappingSimpleExamples.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ConfigExamples.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ConfigExamples.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
