--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MapperTests\When_mapping_an_array.cs" />
     <Compile Include="MapperTests\When_mapping_a_complex_type.cs" />
     <Compile Include="MapperTests\When_mapping_a_collection.cs" />
     <Compile Include="MapperTests\When_mapping_simple_types.cs" />
@@ -68,6 +69,9 @@
       <Project>{ED242B1A-EC9E-4865-A59B-11F1498D46A5}</Project>
       <Name>Nerdle.AutoConfig</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
