--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationTests\When_configuring_a_mapping.cs" />
     <Compile Include="MapperTests\When_mapping_a_dictionary.cs" />
     <Compile Include="MapperTests\When_mapping_an_array.cs" />
     <Compile Include="MapperTests\When_mapping_a_complex_type.cs" />
