--- a/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
+++ b/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoConfig.cs" />
+    <Compile Include="Configuration\IConfigureMapping.cs" />
     <Compile Include="Mappers\ArrayMapper.cs" />
     <Compile Include="Mappers\DictionaryMapper.cs" />
     <Compile Include="Mappers\KeyValuePairMapper.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Mappings\AttributeMapping.cs" />
     <Compile Include="Mappings\IPropertyMapping.cs" />
     <Compile Include="Mappings\ElementMapping.cs" />
+    <Compile Include="CaseConverters\ICaseConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\TypeBuilderExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
