--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Casing\CamelCaseConverterTests\When_converting_to_camel_case.cs" />
     <Compile Include="Casing\MatchingCaseConverterTests\When_converting_to_matching_case.cs" />
     <Compile Include="Mappers\KeyValuePairMapperTests\When_mapping_a_key_value_pair.cs" />
+    <Compile Include="Mapping\MappingFromElementTests\When_mapping_a_property.cs" />
     <Compile Include="TypeGeneration\TypeEmitterTests\When_generating_an_implementation_of_an_interface.cs" />
     <Compile Include="_Old\ConfigurationTests\When_configuring_the_mapping_for_a_type.cs" />
     <Compile Include="Mappers\DictionaryMapperTests\When_mapping_a_dictionary.cs" />
@@ -65,12 +66,12 @@
     <Compile Include="Mappers\ValueMapperTests\When_mapping_simple_types.cs" />
     <Compile Include="Mappers\MapperSelectorTests\When_selecting_a_mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_Old\PropertyMappingTests\When_mapping_a_property.cs" />
+    <Compile Include="Mapping\MappingFromAttributeTests\When_mapping_a_property.cs" />
     <Compile Include="TypeGeneration\TypeFactoryTests\When_requesting_an_interface_from_the_factory.cs" />
     <Compile Include="TypeGeneration\TypeFactoryTests\When_requesting_a_class_from_the_factory.cs" />
     <Compile Include="TypeGeneration\TypeFactoryTests\When_requesting_a_value_type_from_the_factory.cs" />
-    <Compile Include="_Old\TypeMappingTests\When_creating_a_mapping.cs" />
-    <Compile Include="_Old\TypeMappingTests\When_mapping_a_type.cs" />
+    <Compile Include="Mapping\MappingFactoryTests\When_creating_a_mapping.cs" />
+    <Compile Include="Mapping\TypeMappingTests\When_applying_a_type_mapping.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
