--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
     <Compile Include="Casing\CamelCaseConverterTests\When_converting_to_camel_case.cs" />
     <Compile Include="Casing\MatchingCaseConverterTests\When_converting_to_matching_case.cs" />
+    <Compile Include="Extensions\When_deriving_a_concrete_name.cs" />
+    <Compile Include="Extensions\When_getting_public_setters_for_a_type.cs" />
     <Compile Include="Mappers\KeyValuePairMapperTests\When_mapping_a_key_value_pair.cs" />
     <Compile Include="Mapping\MappingFromElementTests\When_mapping_a_property.cs" />
     <Compile Include="Strategy\ConfigureMappingStrategyTests\When_configuring_a_mapping_strategy.cs" />
