Fixed value mapping tests

--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Extensions\When_getting_public_setters_for_a_type.cs" />
     <Compile Include="Mappers\KeyValuePairMapperTests\When_mapping_a_key_value_pair.cs" />
     <Compile Include="Mapping\MappingFromElementTests\When_mapping_a_property.cs" />
+    <Compile Include="Mapping\MappingFromFixedValueTests\When_mapping_a_property.cs" />
     <Compile Include="Strategy\ConfigureMappingStrategyTests\When_configuring_a_mapping_strategy.cs" />
     <Compile Include="Strategy\MappingStrategyProviderTests\When_retrieving_a_strategy.cs" />
     <Compile Include="Strategy\MappingStrategyProviderTests\When_creating_a_strategy.cs" />
